# 100kb.golang

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  Makefile  ai.go  article.go  crawl.go  crawl_test.go  cron.sh  db.go  feed.go  go.mod  go.sum  hacker_news.go  html_to_text.go  html_to_text_test.go  labels.json  labels_bak.json  log.txt  main.go  model.json  output.go  output.sh  readme.md  run_article_index.go  run_article_meta.go  run_feed_refresh.go  run_feed_search.go  run_hacker_news.go  train_test.go  utils.go  utils_test.go  web.go
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
lib/: goadblock.h  gobert-cbindgen.h  gobert.h
lib/goadblock/: Cargo.toml  build.rs
lib/goadblock/src/: adblock.proto  lib.rs
lib/gobert/: Cargo.toml  build.rs
lib/gobert/src/: keywords.proto  lib.rs  sentence_embedding.proto  zero_shot.proto
output/page/: 0.html  1.html  10.html  100.html  1000.html  1001.html  1002.html  1003.html  1004.html  1005.html  1006.html  1007.html  1008.html  1009.html  101.html  1010.html  1011.html  1012.html  1013.html  1014.html  1015.html  1016.html  1017.html  1018.html  1019.html  102.html  1020.html  1021.html  1022.html  1023.html  1024.html  1025.html  1026.html  1027.html  1028.html  1029.html  103.html  1030.html  1031.html  1032.html  (+1064 more)
pkg/ai/: ai.go  ai_cpu.go  ai_cuda.go  ai_test.go  cosine.go  keywords.pb.go  sentence_embedding.pb.go  zero_shot.pb.go
pkg/article/: article.go  (+13 more)
scoring/: scored.csv
testcases/: 1.html  1.txt  2.html  2.txt  3.html  3.txt  4.html  4.txt  5.html  5.txt  6.html  6.txt
train/: labels.json  model.json
views/: articleInfo.html  articleList.html
(+82 files in other folders)
