[package]
name = "gobert"
version = "0.1.0"
edition = "2021"

[lib]
# If you only wanted dynamic library, you'd use only "cdylib".
# If you only wanted static library, you'd use only "staticlib".
# This demo shows both. See https://doc.rust-lang.org/reference/linkage.html
# for more information.
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.152"
rust-bert = { git = "https://github.com/guillaume-be/rust-bert.git" }
tch = "0.14.0"
prost = "0.12"

[build-dependencies]
prost-build = { version = "0.12.3" }